--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="background"></div>
         <div class="container">
           <div class="text">
-            <h1 class="title">API Weather Exo2</h1>
+            <h1 class="title">WeatherApp/h1>
             <h3>Choose the City</h3>
             
             <form>
